--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -1,1 +1,5 @@
 @import 'bootstrap/scss/bootstrap';
+$fa-font-path: '../webfonts';
+@import '@fortawesome/fontawesome-free/scss/solid.scss';
+@import '@fortawesome/fontawesome-free/scss/regular.scss';
+@import '@fortawesome/fontawesome-free/scss/brands.scss';
