--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -3,3 +3,38 @@ $fa-font-path: '../webfonts';
 @import '@fortawesome/fontawesome-free/scss/solid.scss';
 @import '@fortawesome/fontawesome-free/scss/regular.scss';
 @import '@fortawesome/fontawesome-free/scss/brands.scss';
+
+// HEADER //
+
+header{
+    width: 100%;
+    height: 10vh;
+    background-color: #000000;
+    display: flex;
+    flex-direction: row;
+    .title-section{
+        // justify-content: start;
+        h2{
+            // vertical-align: center;
+            margin: 25px 10px 5px 50px;
+            font-size: 2.5rem;
+            color: #ff0000;
+        }
+    }
+    .input-section{
+        position: relative;
+        left: 55%;
+        padding-top: 28px;
+        input{
+            width: 300px;
+            height: 30px;
+            margin-right: 10px;
+        }
+        button{
+            padding: 5px;
+            width: 60px;
+            height: 30px;
+        }
+    }
+    
+}
