--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -41,7 +41,71 @@ $fa-font-path: '../webfonts';
         }
     }
 }
-
+.box{
+    width: 300px;
+    height: 500px;
+    margin-left: 50px;
+    position: relative;
+    .img-box{
+        width: 100%;
+        height: 100%;
+        .poster{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
+    .list-box{
+        width: 100%;
+        height: 100%;
+        margin-top: 40px;
+        padding: 2px 10px ;
+        position: absolute;
+        top: -40px;
+        left: 0;
+        z-index: 1;
+        background-color: rgba($color: #000000, $alpha: 0.7);
+        display: none;
+    }
+    .active{
+        display: block;
+    }
+    ul{
+        margin-bottom: 30px;
+        color: white;
+        font-size: 1.2rem;
+        padding: 15px;
+        max-height: 100%;
+        
+        li{
+            margin-bottom: 20px;
+            list-style: none;
+            h3{
+                color: red;
+            }
+           img{
+               width: 30px;
+               height: 30px;
+               border-radius: 50%;
+           }
+           
+        }
+        .over{
+            font-size: 0.8rem;
+            div{
+                width: 100%;
+                height: 200px;
+                overflow: hidden;
+            }
+        }
+        .yellow{
+            color: yellow;
+        }
+    }
+}
+.description{
+    overflow: scroll;
+}
 
 // HEADER //
 
@@ -73,6 +137,7 @@ header{
             padding: 5px;
             width: 60px;
             height: 30px;
+           
         }
     }
     
