--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -91,10 +91,10 @@ $fa-font-path: '../webfonts';
            
         }
         .over{
-            font-size: 0.8rem;
+            font-size: 0.8rem;     //TROVARE SOLUZIONE
             div{
-                width: 100%;
-                height: 200px;
+                width: 100%;     
+                height: 200vh;
                 overflow: hidden;
             }
         }
