--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -57,7 +57,7 @@ $fa-font-path: '../webfonts';
     }
     .list-box{
         width: 100%;
-        height: 100%;
+        height: 100vh;
         margin-top: 40px;
         padding: 2px 10px ;
         position: absolute;
@@ -66,6 +66,7 @@ $fa-font-path: '../webfonts';
         z-index: 1;
         background-color: rgba($color: #000000, $alpha: 0.7);
         display: none;
+        overflow: scroll;
     }
     .active{
         display: block;
@@ -95,7 +96,6 @@ $fa-font-path: '../webfonts';
             div{
                 width: 100%;     
                 height: 200vh;
-                overflow: hidden;
             }
         }
         .yellow{
@@ -103,9 +103,7 @@ $fa-font-path: '../webfonts';
         }
     }
 }
-.description{
-    overflow: scroll;
-}
+
 
 // HEADER //
 
@@ -142,3 +140,5 @@ header{
     }
     
 }
+
+
